Add support for SS over WSS into shadowbox
